[UPDATE] follow 화면 수정

--- a/views/follow.html
+++ b/views/follow.html
@@ -13,7 +13,7 @@
         <div class="profile-section">
           <div>
             {% if post.User.user_image %}
-              <img class="pic" src="/{{post.User.user_image}}">  
+              <img class="pic" src="{{post.User.user_image}}">  
             {% else %}
               <img class="pic" src="/static/profile.png">
             {% endif %}
