--- a/views/main.html
+++ b/views/main.html
@@ -13,7 +13,7 @@
   <div class="twits">
     <div class="hashtag-list">
    
-      {% set hashs = ['ALL','JAVA','C++', 'C','JavaScript','Nodejs','Os','DB','보안','HTML/CSS','UI/UX'] %}  
+      {% set hashs = ['Q&A','JAVA','C++', 'C','JavaScript','Nodejs','Os','DB','보안','HTML/CSS','UI/UX'] %}  
     
       {% for hash in hashs %}
         <button class="hashtag-item" onclick="filtering( `{{hash}}` )" >#{{hash}}</button>
@@ -53,13 +53,10 @@
         <div class="twit-authorTags">
         <div class="twit-author">#{{post.id}}</div>
         <div class="twit-tags">
-          {% for oneposthashtag in postHashtag %} 
-          {% for onehashtag in hashtag %}
-            {% if post.id==oneposthashtag.PostId and oneposthashtag.HashtagId==onehashtag.id %}              
-                <div class="hashtag-item">{{onehashtag.title}}</div> 
+            {% if postHashTag %}              
+                <div class="hashtag-item">{{postHashTag}}</div> 
             {% endif %}
-          {% endfor %}
-         {% endfor %}  
+         
       </div>
     </div>
         <a href="post/{{post.id}}/detail">
