[UPDATE] insert.html,main.css 글작성 css  수정

--- a/views/insert.html
+++ b/views/insert.html
@@ -24,12 +24,12 @@
             <label for="question_content">설명</label><br>
             <textarea id="story" name="story" class="description" placeholder="설명 입력"></textarea><br>
           </div>
-          <div class="input-group" style="height:230px;">
+          <div class="input-group" style="height:100px;margin-bottom:20px;">
             <label id="postImg-label" for="img">사진 업로드</label>
             <input id="img" type="file" accept="image/*">
             <div class="postImage" >
               <div class="profile-img">
-                <img id="post-img" src="static/profile.jpg" style="width:200%; height:auto;"></div>
+                <img id="post-img" src="static/profile.jpg" style="width:200%; height:100px;"></div>
                 <input id="img-url" type="hidden" name="url">
               </div>        
         </div>
@@ -42,12 +42,13 @@
                   <div class="eachHash"><input type="radio" name="hashtagss" value="C">C</div>
                   <div class="eachHash"><input type="radio" name="hashtagss" value="Javascript">Javascript</div>                 
                   <div class="eachHash"><input type="radio" name="hashtagss" value="Nodejs">Nodejs</div>
-                  <div class="eachHash"><input type="radio" name="hashtagss" value="OS">OS</div>
-                  <div class="eachHash"><input type="radio" name="hashtagss" value="DB">DB</div>
-                  <div class="eachHash"><input type="radio" name="hashtagss" value="보안">보안</div>
-                  <div class="eachHash"><input type="radio" name="hashtagss" value="HTML/CSS">HTML/CSS</div>                                 
-                  <div class="eachHash"><input type="radio" name="hashtagss" value="UI/UX">UI/UX</div>
-              </div>
+                  
+                 <div class="eachHash"><input type="radio" name="hashtagss" value="OS">OS</div>
+                <div class="eachHash"><input type="radio" name="hashtagss" value="DB">DB</div>
+                <div class="eachHash"><input type="radio" name="hashtagss" value="보안">보안</div>
+                <div class="eachHash"><input type="radio" name="hashtagss" value="HTML/CSS">HTML/CSS</div>                                 
+                <div class="eachHash"><input type="radio" name="hashtagss" value="UI/UX">UI/UX</div>
+            </div>
            </div>
            
           <div class="input-group">
