--- a/views/main.html
+++ b/views/main.html
@@ -52,12 +52,16 @@
       <div class="post-info">
         <div class="twit-authorTags">
         <div class="twit-author">#{{post.id}}</div>
-        <div class="twit-tags">
-            {% if postHashTag %}              
-                <div class="hashtag-item">{{postHashTag}}</div> 
-            {% endif %}
-         
-      </div>
+           <div class="twit-tags">
+            {% for oneposthashtag in postHashtag %} 
+            {% for onehashtag in hashtag %}
+              {% if post.id==oneposthashtag.PostId and oneposthashtag.HashtagId==onehashtag.id %}              
+                  <div class="hashtag-item">{{onehashtag.title}}</div> 
+              {% endif %}
+            {% endfor %}
+           {% endfor %}  
+        </div>         
+    
     </div>
         <a href="post/{{post.id}}/detail">
           <div class="name_post" style="color: #000000; position: relative;margin-left: -45px; margin-top: 7px;">{{post.post_title}}</div>
