--- a/views/main.html
+++ b/views/main.html
@@ -132,13 +132,23 @@
       ` <div class="twit">
       <a href="post/${info.id}/detail">
       <input type="hidden" value="${info.User.id}" class="twit-user-id">
+      <input type="hidden" value="${info.User.user_image}" class="twit-user-id">
       <div class="post-profile">
         <div class="profile-section">
           <div>
-            <img class="pic" src="/static/profile.png">
+            {% if info.User.user_image != "" %}
+              <img class="pic" src="${info.User.user_image}">  
+            {% else %}
+              <img class="pic" src="/static/profile.png">
+            {% endif %}
           </div>
           <div>
-            <p>${info.UserId}</p>
+            <p class="inline">${info.UserId}</p>
+            {% if info.UserId != "" %}
+              {% if not followerIdList.includes(info.User.id) and info.User.id !== user.id %}
+                <button class="twit-follow inline">팔로우</button>
+              {% endif %}
+            {% endif %}
             <p>${datedays}&nbsp;${datetime}</p>
           </div>
         </div>
