--- a/views/insert.html
+++ b/views/insert.html
@@ -69,8 +69,8 @@
         lineNumbers : true,
         theme: 'monokai',
         mode : 'javascript',
-        value : "console.log('hello');"
       });
+      editor.setValue("console.log('hello');");
     });
   </script>
   <script>
